--- a/app/src/main/res/layout/layout_person_card_item.xml
+++ b/app/src/main/res/layout/layout_person_card_item.xml
@@ -21,20 +21,20 @@
     </data>
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp">
 
             <ImageView
                 android:id="@+id/image_person"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
                 android:adjustViewBounds="true"
                 android:src="@drawable/innovation"
                 app:layout_constraintEnd_toEndOf="parent"
