--- a/app/src/main/res/layout/layout_person_card_item.xml
+++ b/app/src/main/res/layout/layout_person_card_item.xml
@@ -78,7 +78,18 @@
                 app:layout_constraintTop_toBottomOf="@id/age_person"
                 tools:text="bowling" />
 
+            <ImageView
+                android:id="@+id/clear"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:padding="4dp"
+                android:src="@drawable/ic_clear_black_24dp"/>
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     </androidx.cardview.widget.CardView>
 
